[package]
name = "xportfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
